--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "z-nomp",
     "version": "0.0.4",
-    "description": "Bitcoin Gold (Equihash) stratum mining pool based on NOMP",
+    "description": "Bitcoin Platinum (Equihash) stratum mining pool based on NOMP",
     "keywords": [
         "stratum",
         "mining",
